--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "cross-env": "^7.0.2",
     "electron": "^6.0.0",
     "electron-rebuild": "^1.10.1",
     "vue-cli-plugin-electron-builder": "~1.4.6",
